@@ -68,7 +68,7 @@ extern void resv_fini(void);
 /* send all reservations to accounting.  Only needed at
  * first registration
  */
-extern int send_resvs_to_accounting();
+extern int send_resvs_to_accounting(void);
 
 /* Set or clear NODE_STATE_MAINT for node_state as needed */
 extern void set_node_maint_mode(void);
